utils: add tmp_file
Users are advised to use tmp_file::do_with() to automatically
create the temporary file, and eventually close and remove it.

make_tmp_file can also be used to create a tmp_file,
yet the caller is responsible to close and remove it
in this case.

Signed-off-by: Benny Halevy <bhalevy@scylladb.com>

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -297,6 +297,9 @@ seastar_add_test (fair_queue
 seastar_add_test (file_io
   SOURCES file_io_test.cc)
 
+seastar_add_test (file_utils
+  SOURCES file_utils_test.cc)
+
 seastar_add_test (foreign_ptr
   SOURCES foreign_ptr_test.cc)
 
