utils: add tmp_file
Users are advised to use tmp_file::do_with() to automatically
create the temporary file, and eventually close and remove it.

Signed-off-by: Benny Halevy <bhalevy@scylladb.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -628,7 +628,8 @@ add_library (seastar STATIC
   src/util/exceptions.cc
   src/util/log.cc
   src/util/program-options.cc
-  src/util/read_first_line.cc)
+  src/util/read_first_line.cc
+  src/util/tmp_file.cc)
 
 add_library (Seastar::seastar ALIAS seastar)
 
