utils: add make_filesystem_error helpers
To be used by file utilities.

Signed-off-by: Benny Halevy <bhalevy@scylladb.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -639,6 +639,7 @@ add_library (seastar STATIC
   src/util/alloc_failure_injector.cc
   src/util/backtrace.cc
   src/util/conversions.cc
+  src/util/exceptions.cc
   src/util/file.cc
   src/util/log.cc
   src/util/program-options.cc
