shared_mutex: specify with_lock/with_shared as noexcept
Defined bool_class `is_for_write` to be used by struct waiter
and a `wait(for_write)` method.

Defines a private wait() method that creates a new waiter
and handles exceptions so that if allocation failed an
exceptional future will be returned rather than throwing
an exception.

Use wait() in lock and lock_shared.

The higher level `with_shared` and `with_lock` functions
can be marked as noexcept too now that `func` is required
to be nothrow move constructible and shared_mutex::lock{,_shared}
is noexcept too.

Signed-off-by: Benny Halevy <bhalevy@scylladb.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -594,6 +594,7 @@ add_library (seastar STATIC
   src/core/reactor.cc
   src/core/resource.cc
   src/core/sharded.cc
+  src/core/shared_mutex.cc
   src/core/scollectd.cc
   src/core/scollectd-impl.hh
   src/core/systemwide_memory_barrier.cc
