file: add with_file helper
For auto-closing a file after `func` is executed.

And add unit tests and demo for it.

Signed-off-by: Benny Halevy <bhalevy@scylladb.com>

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -107,3 +107,6 @@ seastar_add_demo (udp_zero_copy
 
 seastar_add_demo (sharded_parameter
   SOURCES sharded_parameter_demo.cc)
+
+seastar_add_demo (file
+  SOURCES file_demo.cc)
