build: add continuations_nothrow_move_constructible option
true by default, this option enables requirement for continuation
functions to be nothrow_move_constructible.

Signed-off-by: Benny Halevy <bhalevy@scylladb.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -288,6 +288,10 @@ if (NOT (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR))
   set (Seastar_TESTING OFF)
 endif ()
 
+option (Seastar_CONTINUATIONS_NOTHROW_MOVE_CONSTRUCTIBLE
+  "Require continuation functions to be nothrow move constructible"
+  ON)
+
 #
 # Useful (non-cache) variables.
 #
@@ -859,6 +863,10 @@ if (Seastar_HWLOC)
 
   target_link_libraries (seastar
     PRIVATE hwloc::hwloc)
+endif ()
+
+if (Seastar_CONTINUATIONS_NOTHROW_MOVE_CONSTRUCTIBLE)
+  list (APPEND Seastar_PRIVATE_COMPILE_DEFINITIONS SEASTAR_CONTINUATIONS_NOTHROW_MOVE_CONSTRUCTIBLE)
 endif ()
 
 if (Seastar_LD_FLAGS)
