util: introduce filesystem_error_injector
Added unit tests for open and "batch" (all, write_like, read_like) operations.

Signed-off-by: Benny Halevy <bhalevy@scylladb.com>

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -292,6 +292,9 @@ seastar_add_test (file_io
 seastar_add_test (file_utils
   SOURCES file_utils_test.cc)
 
+seastar_add_test (filesystem_error_injector
+  SOURCES filesystem_error_injector_test.cc)
+
 seastar_add_test (foreign_ptr
   SOURCES foreign_ptr_test.cc)
 
