Add deferred_close and deferred_stop
Close/stop the object when the respected
deferred_{close,stop} object is destroyed.

In addition, the deferred close/stop classes
provide {close,stop}_now() methods that
can be used to perform the cleanup once
while the {close,stop}_controller is still alive.

Signed-off-by: Benny Halevy <bhalevy@scylladb.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -618,6 +618,7 @@ add_library (seastar STATIC
   include/seastar/util/transform_iterator.hh
   include/seastar/util/tuple_utils.hh
   include/seastar/util/variant_utils.hh
+  include/seastar/util/closeable.hh
   src/core/alien.cc
   src/core/file.cc
   src/core/fair_queue.cc
