cmake: use -O2 for CMAKE_CXX_FLAGS_DEV with clang
With ccache -C; rm -rf build; ./configure.py --compiler=clang++ --c++-dialect=c++20

Before:
$ time ninja -C build/dev
real 1m23.717s
user 33m21.582s
sys 1m48.329s

$ time ninja -C build/dev test
real	3m3.706s
user	1m33.032s
sys	0m7.120s

After:
$ time ninja -C build/dev
real 1m21.250s
user 32m39.210s (-42.4s / -2%)
sys 1m7.219s

Unclear why, but clang++ -O2 seems slightly faster than -O1 for our code.

$ time ninja -C build/dev test
real	2m23.167s
user	0m48.202s (-44.8s / -48%)
sys	0m11.452s

Signed-off-by: Benny Halevy <bhalevy@scylladb.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,8 +81,14 @@ set_property (CACHE Seastar_API_LEVEL
 # fast build/test iteration.
 #
 
+if (CMAKE_CXX_COMPILER_ID MATCHES Clang)
+  set (CMAKE_CXX_FLAGS_DEV_OPT_LEVEL "-O2")
+else ()
+  set (CMAKE_CXX_FLAGS_DEV_OPT_LEVEL "-O1")
+endif ()
+
 set (CMAKE_CXX_FLAGS_DEV
-  "-O1"
+  "${CMAKE_CXX_FLAGS_DEV_OPT_LEVEL}"
   CACHE
   STRING
   "Flags used by the C++ compiler during dev builds."
